--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
+#main {
+  padding: 50px;
+  background-image: url(pawprint0.jpg);
   text-align: center;
+  background-repeat: repeat;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#card{
+  margin-top: 100px;
+  margin-left: 15px;
+  margin-right: 15px;
+  padding: 40px;
+  border: 3px solid black;
+  border-radius: 20px;
+  background-color: rgba(240, 255, 255, 0.8);
+  display: inline-block;
+  justify-content: space-between;
+  text-align: center;
+  height: 300px;
+  width: 220px;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#card img{
+  border-radius: 20px;
+  height: 60%;
+  width: 90%;
+  object-fit: cover;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#addBtn{
+  background-color:rgb(160, 160, 160);
+  border: 2px solid rgb(25, 25, 25);
+  border-radius: 12px;
+  width: 60%;
+  height: 40px;
+  font-weight: bold;
+  color: rgb(75, 125, 105);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#addBtn:hover{
+  background-color:rgb(161, 161, 161);
+  border: 2px solid aquamarine;
+  color: aquamarine;
 }
